--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,6 @@
 {
-  "extends": "astro/tsconfigs/strict"
+  "compilerOptions": {
+    "moduleResolution": "node",
+    "resolveJsonModule": true
+  }
 }
